objects/Indeed_com_job_form__c.object
<CustomObject>
    <label>Indeed.com job form</label>
    <nameField>
        <displayFormat>Form-{0000}</displayFormat>
        <label>Indeed.com job form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indeed.com job forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>EMAIL__c</fullName>
        <inlineHelpText>Please enter your email adders</inlineHelpText>
        <label>EMAIL</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>User, please write your first name EX: ram</inlineHelpText>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experiences__c</fullName>
        <label>Experiences</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Name__c</fullName>
        <inlineHelpText>dear user, please add you&apos;re datils</inlineHelpText>
        <label>Second Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_know__c</fullName>
        <inlineHelpText>Dear user, please select languages you know</inlineHelpText>
        <label>Languages know</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>PYTHON</fullName>
                </value>
                <value>
                    <fullName>APEX</fullName>
                </value>
                <value>
                    <fullName>.NET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Expected__c</fullName>
        <inlineHelpText>please enter the salary expected</inlineHelpText>
        <label>Salary Expected</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Country__c</fullName>
        <inlineHelpText>Please select the preferred country</inlineHelpText>
        <label>Preferred Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>About_Previous_Job__c</fullName>
        <inlineHelpText>please enter the previous job details</inlineHelpText>
        <label>About Previous Job</label>
        <type>TextArea</type>
    </fields>
</CustomObject>